[gd_scene load_steps=13 format=3 uid="uid://7s75qf3um0h0"]

[ext_resource type="Script" path="res://entity/player/player.gd" id="1_rl0vi"]
[ext_resource type="Texture2D" uid="uid://ctkoyf8rtxhqs" path="res://asset/ui/crosshair.png" id="2_tyg2i"]
[ext_resource type="Texture2D" uid="uid://ddwxkjlbdh8hq" path="res://asset/sprite/blob_shadow.png" id="3_tgexf"]
[ext_resource type="PackedScene" uid="uid://oai4dltwisn0" path="res://entity/gun/StarterPistol.tscn" id="3_wg1yd"]
[ext_resource type="PackedScene" uid="uid://by6prw5q6j6sk" path="res://entity/player/ShakeableCamera.tscn" id="4_37fec"]
[ext_resource type="PackedScene" uid="uid://byj1y3wrwtdtq" path="res://ui/PauseUI.tscn" id="5_srijb"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="6_t33b7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_1276k"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_dkhcu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="10_g5bf6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f0s2u"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o6vus"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_rl0vi")
can_wall_jump = true
can_wall_cling = true
max_air_jump = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_f0s2u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_o6vus")

[node name="WallRaycast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(1, 0.988235, 0, 1)
debug_shape_thickness = 5

[node name="Neck" type="Node3D" parent="."]

[node name="ShakeableCamera" parent="Neck" instance=ExtResource("4_37fec")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66, 0)

[node name="AimRecticle" type="TextureRect" parent="Neck/ShakeableCamera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tyg2i")

[node name="DebugLabel" type="Label" parent="Neck/ShakeableCamera"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 12
text = "VSpeed: 0 u/s
HSpeed: 0 u/s"

[node name="GunContainer" type="Node3D" parent="Neck/ShakeableCamera"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.051, -0.094821, -0.185)

[node name="StarterPistol" parent="Neck/ShakeableCamera/GunContainer" instance=ExtResource("3_wg1yd")]

[node name="AimRay" type="RayCast3D" parent="Neck/ShakeableCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.000178993, -0.611622)
target_position = Vector3(0, 0, -100)
collision_mask = 3
collide_with_areas = true

[node name="AimRayEnd" type="Marker3D" parent="Neck/ShakeableCamera/AimRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101)

[node name="PlayerAudio" type="AudioStreamPlayer3D" parent="."]
volume_db = -24.0

[node name="DashDuration" type="Timer" parent="."]
editor_description = "How long the dash action last"
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.27613, 0)
texture_albedo = ExtResource("3_tgexf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PauseUI" parent="CanvasLayer" instance=ExtResource("5_srijb")]
visible = false

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_t33b7")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("7_1276k")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateChart/Root"]
editor_description = "This state is active when the player is on the ground."
script = ExtResource("8_dkhcu")

[node name="onJump" type="Node" parent="StateChart/Root/Grounded"]
editor_description = "When jumping become airborne and enable double-jump."
script = ExtResource("10_g5bf6")
to = NodePath("../../Airborne")
event = &"jump"

[node name="onAirborne" type="Node" parent="StateChart/Root/Grounded"]
editor_description = "When becoming airborne (e.g. through falling) move to airborne state."
script = ExtResource("10_g5bf6")
to = NodePath("../../Airborne")
event = &"airborne"

[node name="Airborne" type="Node" parent="StateChart/Root"]
script = ExtResource("8_dkhcu")

[node name="onGrounded" type="Node" parent="StateChart/Root/Airborne"]
script = ExtResource("10_g5bf6")
to = NodePath("../../Grounded")
event = &"grounded"

[node name="onWallcling" type="Node" parent="StateChart/Root/Airborne"]
script = ExtResource("10_g5bf6")
to = NodePath("../../Wallcling")
event = &"wallcling"

[node name="Wallcling" type="Node" parent="StateChart/Root"]
script = ExtResource("8_dkhcu")

[node name="onStopWallcling" type="Node" parent="StateChart/Root/Wallcling"]
script = ExtResource("10_g5bf6")
to = NodePath("../../Airborne")
event = &"stop_wallcling"

[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="state_input" from="StateChart/Root/Grounded" to="." method="_on_grounded_state_input"]
[connection signal="state_physics_processing" from="StateChart/Root/Grounded" to="." method="_on_grounded_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Airborne" to="." method="_on_airborne_state_entered"]
[connection signal="state_input" from="StateChart/Root/Airborne" to="." method="_on_airborne_state_input"]
[connection signal="state_physics_processing" from="StateChart/Root/Airborne" to="." method="_on_airborne_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Wallcling" to="." method="_on_wallcling_state_entered"]
[connection signal="state_input" from="StateChart/Root/Wallcling" to="." method="_on_wallcling_state_input"]
[connection signal="state_physics_processing" from="StateChart/Root/Wallcling" to="." method="_on_wallcling_state_physics_processing"]
